sửa status booking(1.chưa đến thời gian hoặc hết thời gian thuê phòng thì status = ngoài thời gian sử dụng phòng, 2.trong thời gian sử dụng phòng và 3.đã hủy, gửi yêu cầu dọn phòng đến email và phản hồi yêu cầu dọn phòng)